[package]
edition = "2021"
name = "lapce-cpp-clangd"
version = "0.0.3"

[dependencies]
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"
zip = {version = "0.6.0", default-features = false, features = ["deflate"]}

[dependencies.lapce-plugin]
git = "https://github.com/lapce/lapce-plugin-rust"
branch = "master"
